Question Answers added

--- a/src/main/webapp/login.html
+++ b/src/main/webapp/login.html
@@ -57,7 +57,7 @@
     <script>
         function redir() {
             if(checkLoggedIn()) {
-                window.location.href = "/queryForum_war/account.html";
+                window.location.href = "/queryForum_war/forum.html";
             }
         }
     </script>
